When opening the app with a URL from the share extension, immediately load the page in the background, and then bring the app to the foreground 0.25 seconds after dismissing the extension.

--- a/Read/Info.plist
+++ b/Read/Info.plist
@@ -26,6 +26,16 @@
 				<string>read-http</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>CFBundleURLName</key>
+			<string>read</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>read</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
